--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -13,18 +13,27 @@
         android:layout_weight="1"
         android:orientation="horizontal">
 
-        <Button
-            android:id="@+id/btnBack"
-            android:layout_width="200dp"
-            android:layout_margin="0dp"
+        <ImageButton
+            android:id="@+id/btnBack_settings"
+            android:layout_width="60dp"
             android:layout_height="match_parent"
             android:background="#00ff0000"
-            android:text="← 뒤로가기"
-            android:textSize="30dp" />
+            android:src="@drawable/arrow_back" />
+
+        <TextView
+            android:layout_width="290dp"
+            android:layout_height="match_parent"
+            android:text="설정"
+            android:textAlignment="center"
+            android:gravity="center"
+            android:textSize="25dp"
+            android:textColor="@color/black"
+            android:textStyle="bold" />
+
     </LinearLayout>
     <View
         android:layout_width="match_parent"
-        android:layout_height="3dp"
+        android:layout_height="2dp"
         android:background="@color/black" />
 
     <ScrollView
@@ -45,7 +54,7 @@
                     android:layout_height="match_parent"
                     android:text="   다크테마"
                     android:gravity="left|center"
-                    android:textSize="30dp"
+                    android:textSize="28dp"
                     android:textColor="#000000"
                     android:textStyle="bold" />
                 <Switch
@@ -56,7 +65,8 @@
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black" />
+                android:layout_marginHorizontal="10dp"
+                android:background="#aaa"/>
             <Button
                 android:id="@+id/btnNotice"
                 android:layout_width="match_parent"
@@ -65,12 +75,13 @@
                 android:gravity="left|center"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="30dp"
+                android:textSize="28dp"
                 android:text="   공지사항" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black" />
+                android:layout_marginHorizontal="10dp"
+                android:background="#aaa"/>
             <Button
                 android:id="@+id/btnVersion"
                 android:layout_width="match_parent"
@@ -79,12 +90,13 @@
                 android:gravity="left|center"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="30dp"
+                android:textSize="28dp"
                 android:text="   버전정보" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black" />
+                android:layout_marginHorizontal="10dp"
+                android:background="#aaa"/>
             <Button
                 android:id="@+id/btnCsr"
                 android:layout_width="match_parent"
@@ -93,12 +105,13 @@
                 android:gravity="left|center"
                 android:textColor="@color/black"
                 android:textStyle="bold"
-                android:textSize="30dp"
+                android:textSize="28dp"
                 android:text="   고객센터" />
             <View
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
-                android:background="@color/black" />
+                android:layout_marginHorizontal="10dp"
+                android:background="#aaa"/>
         </LinearLayout>
     </ScrollView>
 
