--- a/app/src/main/res/layout/tab_sort.xml
+++ b/app/src/main/res/layout/tab_sort.xml
@@ -33,19 +33,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp" >
-
         <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
             android:layout_weight="1"
-            android:layout_marginRight="70dp"
-            android:textAlignment="center"
-            android:text="옷 종류" />
-
+            android:text="" />
         <CheckBox
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="2"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1.5"
             android:text="모두선택"
             android:id="@+id/clothesSelect_all" />
     </LinearLayout>
@@ -54,12 +50,19 @@
         android:layout_width="match_parent"
         android:layout_height="40dp" >
 
-        <TextView
+        <CheckBox
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="의류"
-            android:textAlignment="center"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_marginLeft="17dp"
+            android:id="@+id/clothesSelect_all_clothes"/>
+
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginTop="10dp"
+            android:background="#aaa" />
 
         <CheckBox
             android:layout_width="match_parent"
@@ -92,6 +95,12 @@
             android:layout_height="match_parent"
             android:layout_weight="1" />
 
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="10dp"
+            android:background="#aaa"/>
+
         <CheckBox
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -102,26 +111,37 @@
         <CheckBox
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="원피스"
+            android:text="속옷"
             android:layout_weight="1"
-            android:id="@+id/clothesSelect_onepiece"/>
+            android:id="@+id/clothesSelect_under"/>
 
-        <TextView
+        <CheckBox
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1" />
+            android:layout_height="wrap_content"
+            android:text="양말"
+            android:layout_weight="1"
+            android:id="@+id/clothesSelect_socks"/>
+
+
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="40dp" >
 
-        <TextView
+        <CheckBox
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="악세사리"
-            android:textAlignment="center"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:layout_marginLeft="17dp"
+            android:id="@+id/clothesSelect_all_access"/>
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="5dp"
+            android:background="#aaa"/>
+
 
         <CheckBox
             android:layout_width="match_parent"
@@ -133,9 +153,41 @@
         <CheckBox
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="악세사리"
+            android:layout_weight="1"
+            android:id="@+id/clothesSelect_access"/>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:text="가방"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_bag"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="40dp" >
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="기타"
+            android:layout_weight="1"
+            android:layout_marginLeft="17dp"
+            android:id="@+id/clothesSelect_all_etc"/>
+        <View
+            android:layout_width="1dp"
+            android:layout_height="match_parent"
+            android:layout_marginVertical="5dp"
+            android:background="#aaa"/>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="세트"
+            android:layout_weight="1"
+            android:id="@+id/clothesSelect_set"/>
 
         <CheckBox
             android:layout_width="match_parent"
@@ -143,12 +195,20 @@
             android:text="기타"
             android:layout_weight="1"
             android:id="@+id/clothesSelect_etc"/>
+
+        <CheckBox
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="직접입력"
+            android:layout_weight="1"
+            android:id="@+id/clothesSelect_input"/>
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="#000000" />
+        android:layout_marginHorizontal="10dp"
+        android:background="#aaa"/>
 
     <LinearLayout
         android:layout_width="100dp"
