탭을 다이얼러그로 전환

--- a/app/src/main/res/layout/addmenu.xml
+++ b/app/src/main/res/layout/addmenu.xml
@@ -10,72 +10,52 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="11">
-
-        <Button
-            android:id="@+id/btnAddClothes"
-            android:layout_width="wrap_content"
-            android:layout_height="250dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="#00ff0000"
-            android:drawableTop="@drawable/baseline_add_box_24"
-            android:text="옷 추가"
-            android:textColor="#000000"
-            android:textSize="25dp" />
-
-        <Button
-            android:id="@+id/btnAddCodey"
-            android:layout_width="wrap_content"
-            android:layout_height="250dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="#00ff0000"
-            android:drawableTop="@drawable/baseline_add_box_24"
-            android:text="코디 추가"
-            android:textColor="#000000"
-            android:textSize="25dp" />
-
-    </LinearLayout>
-
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1" >
-
+        android:layout_weight="11"
+        android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="bottom">
-
-            <Button
-                android:id="@+id/btnCloset"
-                android:layout_width="match_parent"
+            android:layout_height="45dp">
+            <View
+                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_weight="8"/>
+            <ImageButton
+                android:id="@+id/addMenuClose"
+                android:layout_width="0dp"
+                android:layout_height="40dp"
                 android:layout_weight="1"
-                android:background="#00ff00"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textSize="25dp"
-                android:text="옷장" />
-
-            <Button
-                android:id="@+id/btnCody"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:background="#00ff00"
-                android:textAlignment="center"
-                android:textStyle="bold"
-                android:textSize="25dp"
-                android:text="코디" />
+                android:padding="50dp"
+                android:src="@drawable/xmark"
+                android:background="#00ff0000"/>
         </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center" >
 
-        <android.widget.Button
-            android:id="@+id/btnAdd"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="top|center"
-            android:background="@drawable/baseline_add_circle_24" />
-    </FrameLayout>
+            <Button
+                android:id="@+id/btnAddClothes"
+                android:layout_width="wrap_content"
+                android:layout_height="250dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="#00ff0000"
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="옷 추가"
+                android:textColor="#000000"
+                android:textSize="25dp" />
+
+            <Button
+                android:id="@+id/btnAddCodey"
+                android:layout_width="wrap_content"
+                android:layout_height="250dp"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:background="#00ff0000"
+                android:drawableTop="@drawable/baseline_add_box_24"
+                android:text="코디 추가"
+                android:textColor="#000000"
+                android:textSize="25dp" />
+        </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
