--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -13,13 +13,28 @@
         android:orientation="vertical"
         android:padding="30dp">
 
-        <TextView
-            android:layout_marginTop="-10dp"
-            android:textAlignment="center"
-            android:textSize="30sp"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:text="옷등록"/>
+            android:layout_height="30dp" >
+
+            <ImageButton
+                android:layout_width="30dp"
+                android:layout_height="38dp"
+                android:id="@+id/btnBack_post"
+                android:background="#00ff0000"
+                android:src="@drawable/arrow_back"
+                android:layout_marginLeft="-10dp"
+                android:layout_marginTop="-10dp"/>
+
+            <TextView
+                android:layout_marginTop="-10dp"
+                android:textAlignment="center"
+                android:textSize="30sp"
+                android:layout_width="315dp"
+                android:layout_height="40dp"
+                android:text="옷등록"/>
+
+        </LinearLayout>
 
         <ImageButton
             android:id="@+id/c_img_post"
