--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,25 +10,98 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_weight="1.5"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/btnWeather"
-            android:layout_width="70dp"
+        <View
+            android:layout_width="110dp"
+            android:layout_height="match_parent" />
+        <LinearLayout
+            android:layout_width="190dp"
             android:layout_height="match_parent"
-            android:background="#00ff0000"
-            android:padding="0dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/weather" />
-        
-        <TextView
-            android:id="@+id/textTemp"
-            android:layout_width="290dp"
-            android:layout_height="match_parent"
-            android:text="12°"
-            android:textSize="40dp" />
-
+            android:orientation="vertical">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2">
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:orientation="horizontal"
+                        android:layout_weight="1">
+                        <ImageButton
+                            android:id="@+id/btnWeather"
+                            android:layout_width="70dp"
+                            android:layout_marginLeft="13dp"
+                            android:layout_height="70dp"
+                            android:background="#00ff0000"
+                            android:padding="0dp"
+                            android:scaleType="centerCrop"
+                            android:src="@drawable/weather" />
+                    </LinearLayout>
+                    <LinearLayout
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="2">
+                            <TextView
+                                android:id="@+id/weatherDegree"
+                                android:layout_width="70dp"
+                                android:layout_height="match_parent"
+                                android:text="12°"
+                                android:textSize="40dp" />
+                        </LinearLayout>
+                        <LinearLayout
+                            android:id="@+id/weatherTime"
+                            android:layout_width="match_parent"
+                            android:layout_height="0dp"
+                            android:layout_weight="1">
+                            <TextView
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:text="오전 10:00" />
+                        </LinearLayout>
+                    </LinearLayout>
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:layout_marginLeft="13dp"
+                    android:layout_marginRight="32dp">
+                    <Button
+                        android:id="@+id/refresh"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3"
+                        android:drawableLeft="@drawable/location"
+                        android:drawablePadding="-7dp"
+                        android:text="성남시 복정동"
+                        android:textSize="14dp"
+                        android:background="#00ff0000"/>
+                    <ImageButton
+                        android:id="@+id/btnLocation"
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:padding="5dp"
+                        android:background="#00ff0000"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/refresh" />
+                </LinearLayout>
+            </LinearLayout>
+        </LinearLayout>
+        <View
+            android:layout_width="61dp"
+            android:layout_height="match_parent" />
         <ImageButton
             android:id="@+id/btnSettings"
             android:layout_width="50dp"
@@ -39,7 +112,6 @@
             android:layout_gravity="right"
             android:src="@drawable/setting" />
     </LinearLayout>
-
 
     <LinearLayout
         android:layout_width="wrap_content"
