--- a/app/src/main/res/layout/addmenu.xml
+++ b/app/src/main/res/layout/addmenu.xml
@@ -12,50 +12,78 @@
         android:layout_height="0dp"
         android:layout_weight="11"
         android:orientation="vertical">
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="280dp" />
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="45dp">
+            android:layout_height="45dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp" >
             <View
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="8"/>
+                android:layout_weight="8"
+                android:background="#FFFFFF"/>
             <ImageButton
                 android:id="@+id/addMenuClose"
                 android:layout_width="0dp"
-                android:layout_height="40dp"
+                android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:padding="50dp"
                 android:src="@drawable/xmark"
-                android:background="#00ff0000"/>
+                android:background="#FFFFFF"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center" >
-
-            <Button
-                android:id="@+id/btnAddClothes"
+            android:layout_gravity="center"
+            android:orientation="horizontal"
+            android:layout_marginLeft="30dp"
+            android:layout_marginRight="30dp" >
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="#00ff0000"
-                android:drawableTop="@drawable/baseline_add_box_24"
-                android:text="옷 추가"
-                android:textColor="#000000"
-                android:textSize="25dp" />
-
-            <Button
-                android:id="@+id/btnAddCodey"
+                android:layout_weight="1">
+                <Button
+                    android:id="@+id/btnAddClothes"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_gravity="center"
+                    android:background="#FFFFFF"
+                    android:drawableTop="@drawable/baseline_add_box_24"
+                    android:text="옷 추가"
+                    android:textColor="#000000"
+                    android:textSize="25dp" />
+                </LinearLayout>
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="250dp"
-                android:layout_gravity="center"
-                android:layout_weight="1"
-                android:background="#00ff0000"
-                android:drawableTop="@drawable/baseline_add_box_24"
-                android:text="코디 추가"
-                android:textColor="#000000"
-                android:textSize="25dp" />
+                android:layout_weight="1" >
+                <Button
+                    android:id="@+id/btnAddCodey"
+                    android:layout_width="match_parent"
+                    android:layout_height="250dp"
+                    android:layout_gravity="center"
+                    android:background="#FFFFFF"
+                    android:drawableTop="@drawable/baseline_add_box_24"
+                    android:text="코디 추가"
+                    android:textColor="#000000"
+                    android:textSize="25dp" />
+            </LinearLayout>
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_gravity="center" >
+        <ImageButton
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:src="@drawable/baseline_cancle_circle_24"
+            android:scaleType="centerCrop"
+            android:paddingTop="3dp"
+            android:background="#00ff0000"/>
+    </LinearLayout>
+
 </LinearLayout>
