--- a/app/src/main/res/layout/codyadd.xml
+++ b/app/src/main/res/layout/codyadd.xml
@@ -12,68 +12,23 @@
         android:textAlignment="center"
         android:textSize="30dp"
         android:text="코디등록"/>
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textSize="15dp"
-            android:textAlignment="center"
-            android:text="상의"/>
-        <ImageView
-            android:id="@+id/codyadd_top"
-            android:layout_marginTop="15dp"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:src="@drawable/top"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
+        android:layout_height="499dp"
         android:orientation="vertical">
 
-        <TextView
+        <ListView
+            android:id="@+id/codylist"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="하의"
-            android:textAlignment="center"
-            android:textSize="15dp" />
+            android:layout_height="520dp" />
 
-        <ImageView
-            android:id="@+id/codyadd_mid"
-            android:layout_marginTop="15dp"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:src="@drawable/mid"/>
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="160dp"
-        android:orientation="vertical">
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15dp"
-            android:textAlignment="center"
-            android:text="신발"/>
-        <ImageView
-            android:id="@+id/codyadd_btm"
-            android:layout_marginTop="15dp"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:src="@drawable/btm"/>
+
     </LinearLayout>
     <LinearLayout
         android:layout_width="350dp"
         android:layout_height="30dp"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="15dp"
         android:layout_gravity="center">
 
         <CheckBox
@@ -141,13 +96,23 @@
             android:layout_width="140dp"
             android:layout_height="wrap_content"
             />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="옷장 위치"
+            android:textSize="15dp" />
 
+        <Spinner
+            android:id="@+id/cody_location"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:layout_gravity="center">
         <Button
             android:id="@+id/codyadd_addbtn"
