--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -17,7 +17,7 @@
             android:layout_marginBottom="16dp"
             android:layout_gravity="center" />
 
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detail_c_loc"
@@ -25,7 +25,7 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detail_c_name"
@@ -33,7 +33,7 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detail_c_type"
@@ -41,7 +41,7 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detail_c_size"
@@ -49,7 +49,7 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detail_c_brand"
@@ -57,7 +57,7 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detail_c_tag"
@@ -65,7 +65,7 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detail_c_memo"
@@ -73,7 +73,7 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detail_c_date"
@@ -81,7 +81,7 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
-        <TextView
+        <EditText
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/detail_c_stack"
@@ -89,5 +89,20 @@
             android:textSize="18dp"
             android:layout_marginBottom="8dp"/>
 
+        <!--
+        <Button
+            android:id="@+id/detail_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="수정 / 저장하기" />
+
+        <Button
+            android:id="@+id/detail_delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="옷 삭제하기" />
+        -->
     </LinearLayout>
 </ScrollView>
