--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -33,15 +33,16 @@
                         android:layout_height="match_parent"
                         android:orientation="horizontal"
                         android:layout_weight="1">
+
                         <ImageButton
                             android:id="@+id/btnWeather"
                             android:layout_width="70dp"
+                            android:layout_height="match_parent"
                             android:layout_marginLeft="13dp"
-                            android:layout_height="70dp"
                             android:background="#00ff0000"
                             android:padding="0dp"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/weather" />
+                            android:src="@drawable/sun" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
