--- a/app/src/main/res/layout/cody.xml
+++ b/app/src/main/res/layout/cody.xml
@@ -41,7 +41,7 @@
                             android:background="#00ff0000"
                             android:padding="0dp"
                             android:scaleType="centerCrop"
-                            android:src="@drawable/weather" />
+                            android:src="@drawable/sun" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="0dp"
